# gogoanime

./: Cargo.toml
src/: gogoanime.rs  lib.rs  main.rs
