[package]
name = "rst-cosumet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
scraper = "0.19.0"
reqwest = { version = "0.11" }
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1", features = ["full"] }
